brah brah, learning a lot

--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "connect-session-sequelize": "^7.0.4",
     "dayjs": "^1.11.7",
     "dotenv": "^8.2.0",
-    "eslint": "^7.12.1",
-    "eslint-config-prettier": "^6.15.0",
-    "eslintrc": "^1.0.6",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "mdb-cli": "^4.3.0",
     "mysql2": "^2.2.5",
-    "prettier": "^2.1.2",
     "sequelize": "^6.3.5"
+  },
+  "devDependencies": {
+    "prettier": "^2.1.2",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint": "^7.12.1",
+    "eslintrc": "^1.0.6",
+    "@types/express-session": "^1.17.6"
   }
 }
